# 3D-Sculptor

./: .gitignore  CMakeLists.txt  README.MD  dconfig  main.cpp  make.sh  sculptor_3d.depend  sculptor_3d.layout  voxel.h
doxygen_docs/html/: README_8MD.html  Sculptor_8cpp.html  Sculptor_8cpp_source.html  Sculptor_8h.html  Sculptor_8h_source.html  annotated.html  classSculptor-members.html  classSculptor.html  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_func.html  functions_vars.html  globals.html  globals_func.html  index.html  main_8cpp.html  main_8cpp_source.html  structVoxel-members.html  structVoxel.html  voxel_8h.html  voxel_8h_source.html
doxygen_docs/latex/: README_8MD.tex  Sculptor_8cpp.tex  Sculptor_8h.tex  annotated.tex  classSculptor.tex  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  dir_d44c64559bbebec7f509842c48db8b23.tex  files.tex  index.tex  main_8cpp.tex  refman.tex  structVoxel.tex  voxel_8h.tex
include/: CutBox.h  CutDisc.h  CutEllipsoid.h  CutSphere.h  CutVoxel.h  FiguraGeometrica.h  GeometricFigure.h  Interpreter.h  PutBox.h  PutDisc.h  PutEllipsoid.h  PutSphere.h  PutVoxel.h  Sculptor.h  voxel.h
models/: hat.off  marvin.off  sample.off  test.off  test.txt
models/etapa2/: hat.off  test.off
scripts/: hat.txt  test.txt
src/: CutBox.cpp  CutDisc.cpp  CutEllipsoid.cpp  CutSphere.cpp  CutVoxel.cpp  Interpreter.cpp  PutBox.cpp  PutDisc.cpp  PutEllipsoid.cpp  PutSphere.cpp  PutVoxel.cpp  Sculptor.cpp
text_scripts/: marvin.txt  test.txt
(+37 files in other folders)
